# osgood

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  build.rs
benchmarks/: README.md  node-hello-world-cluster.js  node-hello-world.js  osgood-hello-world-app.js  osgood-hello-world-worker.js
docs/: Building.md  Command-Line-Usage.md  CouchDB-CRUD-App.md  GitHub-API-Merge-App.md  Hello-World-App.md  Home.md  Installation.md  JavaScript-Features.md  Osgood-Application-File.md  Osgood-Overview.md  Osgood-Worker-Files.md
examples/contact/: app.js  contact.js
examples/couchdb-rest/: README.md  app.js  commands.sh  common.js  create.js  delete.js  list.js  update.js  view.js
examples/simple/: Dockerfile  README.md  app.js  gh-merge.js  hello.js
integration/: common.js  test
integration/basic-app/: app.js  connection-refused.js  echo-headers.js  fetches.js  image.js  relative.js  string-stream-resp.js  urlencode.js
integration/server/: node-test-server.js  package-lock.json
js/: config_bootstrap.js  package-lock.json  package.json  preamble.js  webpack.config.js
js/bootstrap/: base64.js  body_mixin.js  common.js  console.js  context.js  fetch.js  form_data.js  headers.js  inbound.js  index.js  request.js  response.js  timers.js
osgood-v8/: Cargo.toml  build.rs  v8-version.txt
osgood-v8-macros/: Cargo.toml
osgood-v8-macros/src/: lib.rs
osgood-v8-macros/tests/: smoke.rs
osgood-v8/src/: binding.rs  lib.rs  (+1 more)
scripts/: install-v8
src/: config.rs  main.rs  worker.rs
tests/: test.rs
(+82 files in other folders)
